<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Control center</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="up_string">Transfer</string>
    <string name="down_string">Download mirroring</string>
    <string name="start_string">Start</string>
    <string name="stop_string">Close</string>
    <string name="back_string">Exit</string>
    <string name="action_string">In operation...</string>
    <string name="starting_string">Strarting...</string>
    <string name="uping_string">Being transferred...</string>
    <string name="connect_string">Connect</string>
    <string name="group_string">Create Group</string>
    <string name="seachdevice_string">Seach devices……</string>
</resources>